--- a/app/views/layouts/_signin.html.erb
+++ b/app/views/layouts/_signin.html.erb
@@ -1,4 +1,4 @@
-     
+<%= javascript_include_tag 'users/sign-in'%>     
 <div class="modal fade" id="signinModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content"style="width:75%">
