--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-
+<%= javascript_include_tag 'events/event-show'%>
 <%= render partial: "layouts/dash_board/sidebar_top"%>
 
 
@@ -174,61 +174,12 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-      <script>
-$(document).ready(function() {
-    $("a.iframe").fancybox({
-        width : 380, // or whatever
-        height: 280,
-        type: "iframe"
-    });
 
-
-    $('.playuservideo').click(function()
-    {
-      $('#playallmodal').modal('show');
-      
-      var videopath=$(this).data('videopath');
-      var videotag='<video controls>'+
-                  '<source src="'+videopath+'" type="video/mp4">'+
-                  ' <source src="'+videopath+'" type="video/ogg">'+
-                  '  <source src="'+videopath+'" type="video/webm">'+
-                  ' <object src="'+videopath+'">'+
-                  '<embed src="'+videopath+'">'+
-                   '</object> </video>';
-
-      $('#userchoice').html(videotag);
-      console.log('this image is '+$(this).id);
-      console.log('image src is '+$(this).attr('src'));
-      console.log('Description is is '+$(this).data('videopath'));
-
-    });
-})
-  </script>
-
-
-
- <script>
-jQuery(function() {
-$(".uploadmedia").click(function(){
-  $("#myModal").modal("show");
-});
-$(".uploadvideo").click(function(){
-  $("#myVideo").modal("show");
-});
-
-});
-</script>
-
-
-     <%= render partial: "layouts/dash_board/sidebar_bottom"%>
+    <%= render partial: "layouts/dash_board/sidebar_bottom"%>
 
     <%= render partial: "layouts/dash_board/image_upload"%>
 
     <%= render partial: "layouts/dash_board/video_upload"%>
-
-
-
-
 
 <style>
       td p img {
