--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag 'users/contact'%>
 <%= render partial: "layouts/header"%>  
 <!-- <script src="js/jquery.validate.min.js"></script> -->
  
@@ -97,37 +98,3 @@
 
   
   <%= render partial: "layouts/footer"%>
-
-  <script type="text/javascript">
-$(document).ready(function() {
-    $('#contactValidate').click(function() {
-        var name = $('#contact_name').val();
-        var email = $('#contact_email').val();
-        var message = $('#contact_message').val();
-        var regxEmail = /^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$/;
-
-       if ($.trim(name).length == 0) {
-            alert('Please enter Name'); 
-            return false;
-        }
-        else if (!regxEmail.test(email))
-        {
-            alert("Enter valid Email Address");
-            return false;
-        }
-        else if($.trim(email).length == 0) {
-            alert('Please enter valid email address'); 
-            return false;
-        }
-        else if ($.trim(message).length == 0) {
-           alert('Please enter Message');
-            return false;
-        } 
-        else {
-            return true;
-        }
-    });   
-});
-
-
-</script>
