--- a/app/views/layouts/dash_board/_video_upload.html.erb
+++ b/app/views/layouts/dash_board/_video_upload.html.erb
@@ -14,7 +14,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <input type="submit" class="btn btn-primary" value = "Upload Image">
+        <input type="submit" class="btn btn-primary" value = "Upload Video">
       </div>
     </div>
   </div>
