--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
 							<li><%= link_to "ABOUT",about_us_path %></li>
 							<li><a href="/users/sign_up">REGISTER</a></li>
 							<li><%= link_to "CONTACT",contact_us_path %></li>
-							<li><%= link_to "EVENTS",events_path %></li>
+							<li><%= link_to "EVENTS",user_events_path %></li>
 						</ul>
 					</nav>
 				</div>
