--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -14,20 +14,22 @@
 						<div class="about-box-content">
 <table class="table table-striped table-bordered table-condensed">
   <tr>
-    <th>Title</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <th>Description</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <th>Venue</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <th>Event start date</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <th>Title</th>
+    <th>Description</th>
+    <th>Venue</th>
+    <th>Event start date</th>
     <th>Event end date</th>
+    <th>View Event</th>
   </tr>
 
 <% @events.each do |event| %>
   <tr>
-    <td><%= event.title %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <td><%= raw(event.description) %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <td><%= event.event_start_date.strftime("%b %d,%Y") %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <td><%= event.title %></td>
+    <td><%= raw(event.description) %></td>
+    <td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
+    <td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
     <td><%= event.event_end_date.strftime("%b %d,%Y") %></td>
+    <td><%= link_to "Show", read_more_path(event) %></td>
 
   </tr>
 <% end %>
