--- a/app/views/users/dash_board/find_events.html.erb
+++ b/app/views/users/dash_board/find_events.html.erb
@@ -21,28 +21,30 @@
         </div>
 <table class="table table-striped table-bordered table-condensed">
   <tr>
-    <th>Title</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <th>Description</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <th>Venue</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <th>Event start date</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <th>Title</th>
+    <th>Description</th>
+    <th>Venue</th>
+    <th>Event start date</th>
     <th>Event end date</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Show Event</th>
   </tr>
 <% if @events%>
 <% @events.each do |event| %>
   <tr>
-    <td><%= event.title %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <td><%= raw(event.description) %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <td><%= event.event_start_date.strftime("%b %d,%Y") %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <td><%= event.title %></td>
+    <td><%= raw(event.description) %></td>
+    <td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
+    <td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
     <td><%= event.event_end_date.strftime("%b %d,%Y") %></td>
-
+    <td><%= link_to 'Show', event %></td>
   </tr>
 <% end %>
-<% end %>
 </table>
+    <div style="text-align:center;">
+                <%= will_paginate @events,:page_links => true, renderer: BootstrapPagination::Rails %>
+    </div>
+<% end %>
+
 
 <br />
 <div class="clearfix">
