--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -25,7 +25,8 @@
 <% @events.each do |event| %>
   <tr>
     <td><%= event.title %></td>
-    <td><%= raw(event.description) %></td>
+    <% desc = Sanitize.clean(event.description) %>
+    <td><%= truncate((desc), :length => 200)%></td>
     <td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
     <td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
     <td><%= event.event_end_date.strftime("%b %d,%Y") %></td>
