set width and height for videos

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -162,7 +162,7 @@
                       
     <div class="modal fade" id="playallmodal">
   <div class="modal-dialog">
-    <div class="modal-content" style="width:70%">
+    <div class="modal-content">
 
       <div class="modal-body">
          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
